--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
-
 <html>
 <head>
 
-	<title>Omus color game</title>
-	<link rel="stylesheet" type="text/css" href="f.css">
+	<title>color game</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery-3.3.1.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
 	
 
 </head>
 <body>
 	<h1>The Great<br><span> RGB </span> <br>Colour Game</h1>
 	<div class="option"><span><strong>Start Play&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</stong></span><span><strong></strong></span><span><strong></strong></span></div>
-	<div class="dabba">
+	<div class="row">
 		
-		<div id="squares"></div>
-		<div id="squares"></div>
-		<div id="squares"></div>
-		<div id="squares"></div>
-		<div id="squares"></div>
-		<div id="squares"></div>
-		
-		
-		
+			<div class="col-lg-4" ><div class="col"></div></div>
+			<div class="col-lg-4" ><div class="col"></div></div>
+			<div class="col-lg-4"><div class="col"></div></div>	
 	</div>
-<script type="text/javascript" src="java.js" ></script>
+	<div class="row">
+			<div class="col-lg-4" ><div class="col"></div></div>
+			<div class="col-lg-4" ><div class="col"></div></div>
+			<div class="col-lg-4"><div class="col"></div></div>
+	</div>
+			
+<script type="text/javascript" src="colorgame.js" ></script>
 
 	
 <body>
