--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<title>color game</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="jquery-3.3.1.js"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 	
@@ -26,6 +29,15 @@
 	</div>
 			
 <script type="text/javascript" src="colorgame.js" ></script>
+
+<script>
+
+	
+			$(document).ready(function(){
+				$(".col").addClass("col2");
+			})
+</script>
+
 
 	
 <body>
