--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 	<div class="option"><span><strong>Start Play&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</stong></span><span><strong></strong></span><span><strong></strong></span></div>
 	<div class="row">
 		
-			<div class="col-lg-4" ><div class="col"></div></div>
-			<div class="col-lg-4" ><div class="col"></div></div>
-			<div class="col-lg-4"><div class="col"></div></div>	
-	</div>
-	<div class="row">
-			<div class="col-lg-4" ><div class="col"></div></div>
-			<div class="col-lg-4" ><div class="col"></div></div>
-			<div class="col-lg-4"><div class="col"></div></div>
+			<div class="col-lg-4 col-md-6 col-sm-6" ><div class="col"></div></div>
+			<div class="col-lg-4 col-md-6 col-sm-6" ><div class="col"></div></div>
+			<div class="col-lg-4 col-md-6 col-sm-6"><div class="col"></div></div>	
+			<div class="col-lg-4 col-md-6 col-sm-6" ><div class="col"></div></div>
+			<div class="col-lg-4 col-md-6 col-sm-6" ><div class="col"></div></div>
+			<div class="col-lg-4 col-md-6 col-sm-6"><div class="col"></div></div>
 	</div>
 			
 <script type="text/javascript" src="colorgame.js" ></script>
