--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 <script type="text/javascript" src="colorgame.js" ></script>
 
 <script>
-
-	
 			$(document).ready(function(){
-				$(".col").addClass("col2");
+				$(".row").addClass("row2");
+				$("h1").addClass("tr1");
 			})
 </script>
 
