updated background , option

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			$(document).ready(function(){
 				$(".row").addClass("row2");
 				$("h1").addClass("tr1");
+				$(".option").addClass("slide");
+
 			})
 </script>
 
